# crustchan2

./: .gitignore  AGENTS_manual.md  Cargo.toml  README.md
.github/: AI_RESOURCES.md  copilot-instructions.md
.github/skills/create-agentsmd/: SKILL.md
.github/skills/prd/: SKILL.md
.moon/: toolchains.yml
